		provides support for additional OpenCL kernels.

2010-05-08
	* Version 3.0.3 Released

2010-05-10
	* Function 'amd_inst_FETCH_impl()' extended, providing support for more data formats.
	* Functions 'amd_inst_SET???_impl()' and 'amd_inst_SET???_DX10_impl()'
	* Functions 'amd_inst_CND???_impl()'
	* Evergreen Instructions COS/SIN/FRACT

2010-05-11
	* src/libcpuarch: Library 'libcpuarch' created, including all files used in the main
		'src' directory, except those generating executables.
	* all: Replace email address to 'ubal@gap.upv.es'.
	* src/libcpukernel: Library 'libm2skernel' renamed.
	* src/libcpudisasm: Library 'libdisasm' renamed.

2010-05-13
	* src/libgpuarch: Makefile.in added
	* src/libgpukernel/gpuisa.c: support for different warps.

2010-05-16
	* src/libgpukernel: warp -> wavefront, thread -> work_item
	* src/libgpukernel/gpuisa.c: current decoded instruction added as a field of struct
		gpu_wavefront_t.

2010-05-17
	* src/libmisc/misc.h: double linked lists generalized.
	* src/libcpukernel/cpukernel.c: using new double linked list macros.
	* src/libgpukernel: work-groups created. Lists of wavefronts.
	* src/libgpukernel/gpumachine.c: barriers implemented for synchronization among
		wavefronts in the same work-group.
	* src/libgpukernel: Work-groups include lists of running/finished wavefronts, or
		wavefronts waiting in barriers. OpenCL kernel structure includes a list
		of running/finished work-groups.

2010-05-18
	* src/libstruct/config.h: functions added to check format of configuration files.
	* src/libgpukernel/opencl-obj.c: 'gpu_max_work_group_size' return as result value
		for OpenCL call.

2010-05-22
	* src/libgpuarch/gpupipeline.c: initial 6-stage design of GPU pipeline.
	* src/libgpukernel/gpukernel-local.h: file removed, unified in 'gpukernel.h'

2010-05-25
	* src/libgpukernel: fields in work-group, work-item, and wavefront unified.
	* src/libgpukernel: structure 'gpu_ndrange_t' added, code reorganized.