@@ -918,3 +918,6 @@
 2010-05-25
 	* src/libgpukernel: fields in work-group, work-item, and wavefront unified.
 	* src/libgpukernel: structure 'gpu_ndrange_t' added, code reorganized.
+
+2010-05-26
+	* src/libgpuarch: schedule stage, instruction emulation
